Add Umami script

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="b7f9d93f-5ebb-4367-83b0-96ad5e9cc9f3"></script>
 	</head>
 	<body>
 		<div id="root"></div>
